# ansible-operator

./: .gitignore  AGENTS.md  Cargo.toml  Containerfile  Containerfile.sshd  Justfile  README.md  THREAT_MODEL.md  agents.md  config.example.toml
.github/: dependabot.yml
.github/workflows/: container-sshd.yml  container.yml  openssh-bump.yml  release-sshd.yml  rust.yml
chart/: Chart.yaml  README.md  values.yaml
chart/crds/: clusterinventories.ansible.cloudbending.dev.yaml  nodeaccesspolicies.ansible.cloudbending.dev.yaml  playbookplans.ansible.cloudbending.dev.yaml  plays.ansible.cloudbending.dev.yaml  staticinventories.ansible.cloudbending.dev.yaml
chart/templates/: NOTES.txt  clusterrole.yaml  configmap.yaml  deployment.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/cluster-operators/: deployment.md  index.md  node-access-policies.md  security.md
docs/src/running-playbooks/: cluster-nodes.md  external-hosts.md  index.md  playbook-plans.md  results-and-troubleshooting.md  scheduling-and-modes.md  variables-and-files.md
examples/: chroot.yaml  inventory.yaml  k3s-worker.yaml  oneshot-fail.yaml  oneshot-immediate.yaml  oneshot-success.yaml  playbookplan.yaml  static-inventory.yaml
examples/v1beta1/: cluster-inventory.yaml  k3s-upgrade.yaml  node-access-policy.yaml  oneshot-fail-pp.yaml  static-inventory.yaml
src/: config.rs  main.rs  nodeselector.rs  playbookplan.rs  types.rs  utils.rs
src/ansible/: mod.rs  playbook_renderer.rs  render_error.rs
src/controllers/: mod.rs  playbookplan.rs  reconcile_error.rs
src/resources/: mod.rs  playbookplan.rs
src/resources/v1beta1/: mod.rs  playbookplan.rs
src/v1beta1/: ca.rs  labels.rs  mod.rs
src/v1beta1/ansible/: ansible_operator_recap.py  command_renderer.rs  inventory_renderer.rs  mod.rs  playbook_renderer.rs
src/v1beta1/controllers/: ansible_inventory.rs  inventory_resolver.rs  mod.rs  nodeselector.rs  playbookplan.rs  playbookplancontroller.rs  reconcile_error.rs
src/v1beta1/controllers/clusterinventorycontroller/: mappers.rs  mod.rs  reconciler.rs
src/v1beta1/controllers/inventorycontroller/: mappers.rs  reconciler.rs
src/v1beta1/controllers/nodeaccesspolicycontroller/: mappers.rs  reconciler.rs
src/v1beta1/controllers/playbookplancontroller/: callback_output.rs  execution_evaluator.rs  job_builder.rs  locking.rs  managed_ssh.rs  mappers.rs  mod.rs  node_access.rs  paths.rs  play_history.rs  reconciler.rs  status.rs  triggers.rs  workspace.rs
src/v1beta1/resources/: cluster_inventory.rs  custom_rfc3339.rs  generic.rs  inventory.rs  mod.rs  node_access_policy.rs  play.rs  playbookplan.rs  static_inventory.rs
