[package]
name = "ansible-operator"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license-file = "LICENSE"

[dependencies]
chrono = "0.4.44"
chrono-tz = "0.10.4"
cron = "0.16.0"
futures = "0.3.32"
futures-util = "0.3.32"
kube = { version = "3.1.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27.0", features = ["v1_32"] }
schemars = "1.0.0"
serde = "1.0.228"
serde_derive = "1.0.219"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
twox-hash = { version = "2.1.2", features = ["xxhash3_64", "std"] }
regex = "1.12.3"
lazy_static = "1.5.0"
ssh-key = { version = "0.6.7", default-features = false, features = ["ed25519", "alloc", "std", "getrandom"] }

[dev-dependencies]
# Container-backed integration tests (see managed_ssh::container_tests). #[ignore]d by default;
# require a running Docker/Podman API socket and an `ssh` client binary on the runner.
testcontainers = "0.27.3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
