[package]
name = "ansible-operator"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license-file = "LICENSE"

[dependencies]
chrono = "0.4"
chrono-tz = "0.10"
cron = "0.17"
futures = "0.3"
futures-util = "0.3"
kube = { version = "4", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.28", features = ["v1_35"] }
schemars = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twox-hash = { version = "2.1", features = ["xxhash3_64", "std"] }
regex = "1"
lazy_static = "1"
ssh-key = { version = "0.6", default-features = false, features = [
    "ed25519",
    "alloc",
    "std",
    "getrandom",
] }
toml = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
# Container-backed integration tests (see managed_ssh::container_tests). #[ignore]d by default;
# require a running Docker/Podman API socket and an `ssh` client binary on the runner.
testcontainers = "0.27"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
